<resources>
    <string name="app_name">FiveDice</string>
    <string name="default_player_one_name">Default Name One</string>
    <string name="default_player_two_name">Default Name Two</string>
    <string name="default_point_text">0 points / 300 points</string>
    <string name="placeholder_round">Round 1</string>
    <string name="keep_btn_discard">Discard</string>
    <string name="placeholder_left">Rerolls left: 3</string>
    <string name="btn_roll">Roll</string>
    <string name="round_text">Round %d</string>
    <string name="turn_text">It\'s %s\'s turn!</string>
    <string name="rerolls_left_text">Rerolls left: %d</string>
    <string name="btn_roll_next">Next</string>
    <string name="player_points_text">%d points / %d points</string>
    <string name="btn_keep">Keep</string>
    <string name="strPlayerOneName">First player name</string>
    <string name="strTwoPlayerName">Second player name</string>
    <string name="strTargetScore">Target score</string>
    <string name="strPlay">Play</string>
    <string name="strLeaderboard">LeaderBoard</string>
    <string name="strMainMenu">Main menu</string>
    <string name="strPlayAgain">Play again</string>
    <string name="strWinner">Winner!</string>
    <string name="strWinnerName">Winner Name</string>
    <string name="strPlayerName">Player Name</string>
    <string name="strPlayerPvPPoint">PvP Point</string>
    <string name="strPlayerPvEPoint">PvE Point</string>
    <string name="computer_player_name">The Computer</string>
    <string name="strInfo">Informations</string>
    <string name="strInfoOut">Authors:\n
This game was created by the FiveDice Developer Team. A team of four members:\n
-   Turony Evelin\n
-   Babos Dávid\n
-   Deé Lukács András Gergely\n
-   Derzsi Dániel\n
This project was created in the frame of an Erasmus program, this is our final dissertation.\n
Project informations:\n
This project is a simple distractive game called FiveDive where every player has 5 dices
        with which they have to reach a given score threshold.\n\n
Gameplay:\n
In the FiveDice game there is two game modes you can choose from:\n
-   Player versus Player – where two players can play against each other\n
-   Player versus AI – where a player can play against the computer\n
In every turn each player has 3 rounds to throw the dices. After the first throw the players
        can decide which dices they want to throw again by keeping them or discarding them.
        After the 3 throws the points will be added from the dices and that will be the players final score.\n
When one of the players reach the given score threshold and both player has same rounds
        the game will end and the player with the biggest score will be the winner.\n
The gameplay will be made more exciting by the addition of sound effects and animations.</string>

    <!-- Items of the game mode selection spinner -->
    <string-array name="gamemodes">
        <item>Player versus Player</item>
        <item>Player versus AI</item>
    </string-array>

    <!-- Items of the score selection spinner -->
    <string-array name="scores">
        <item>Reach 20 points</item>
        <item>Reach 40 points</item>
        <item>Reach 80 points</item>
        <item>Reach 100 points</item>
        <item>Reach 125 points</item>
        <item>Reach 150 points</item>
        <item>Reach 200 points</item>
        <item>Reach 250 points</item>
        <item>Reach 300 points</item>
        <item>Reach 500 points</item>
        <item>Reach 750 points</item>
        <item>Reach 1000 points</item>
    </string-array>

</resources>
