<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strPlayerName"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPlayerPvPPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strPlayerPvPPoint"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"/>

        <TextView
            android:id="@+id/txtPlayerPvEPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strPlayerPvEPoint"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_light"/>
    </LinearLayout>

</LinearLayout>