<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.activity.LeaderboardActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPlayerNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strPlayerName"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/text_background"/>

        <TextView
            android:id="@+id/txtPlayerPvPWinsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strPlayerPvPPoint"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/text_background"/>

        <TextView
            android:id="@+id/txtPlayerPvEText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strPlayerPvEPoint"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/text_background"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpValueOfSpace" />


    <ListView
        android:id="@+id/lvAllPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>