<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    tools:context=".gui.activity.GameActivity">

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@android:color/background_light"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placeholder_round"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TableLayout
            android:id="@+id/tblScores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="33dp">

                <TextView
                    android:id="@+id/txtPlayerOneName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_player_one_name"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="200dp"
                    android:layout_height="25dp">

                    <ProgressBar
                        android:id="@+id/barPlayerOne"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:progressDrawable="@drawable/custom_progressbar" />

                    <TextView
                        android:id="@+id/txtPlayerOneScore"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignLeft="@id/barPlayerOne"
                        android:layout_alignTop="@id/barPlayerOne"
                        android:layout_alignRight="@id/barPlayerOne"
                        android:layout_alignBottom="@id/barPlayerOne"
                        android:background="#00000000"
                        android:gravity="center"
                        android:text="@string/default_point_text" />
                </RelativeLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtPlayerTwoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_player_two_name"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="200dp"
                    android:layout_height="25dp">

                    <ProgressBar
                        android:id="@+id/barPlayerTwo"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:progressDrawable="@drawable/custom_progressbar" />

                    <TextView
                        android:id="@+id/txtPlayerTwoScore"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignLeft="@id/barPlayerTwo"
                        android:layout_alignTop="@id/barPlayerTwo"
                        android:layout_alignRight="@id/barPlayerTwo"
                        android:layout_alignBottom="@id/barPlayerTwo"
                        android:background="#00000000"
                        android:gravity="center"
                        android:text="@string/default_point_text" />
                </RelativeLayout>

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/txtRoundWhich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="It's Player 2's round!"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCenter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDice1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dice_0" />

            <Button
                android:id="@+id/btnKeep1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorKeepInactive"
                android:text="@string/keep_btn_discard"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Space
            android:layout_width="15dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDice2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dice_0" />

            <Button
                android:id="@+id/btnKeep2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorKeepInactive"
                android:text="@string/keep_btn_discard"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Space
            android:layout_width="15dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDice3"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dice_0" />

            <Button
                android:id="@+id/btnKeep3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorKeepInactive"
                android:text="@string/keep_btn_discard"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Space
            android:layout_width="15dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDice4"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dice_0" />

            <Button
                android:id="@+id/btnKeep4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorKeepInactive"
                android:text="@string/keep_btn_discard"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Space
            android:layout_width="15dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDice5"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dice_0" />

            <Button
                android:id="@+id/btnKeep5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@color/colorKeepInactive"
                android:text="@string/keep_btn_discard"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutCenter"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRerolls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placeholder_left"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_roll" />
    </LinearLayout>
</LinearLayout>